--- a/templates/aboutVRB.html
+++ b/templates/aboutVRB.html
@@ -123,8 +123,8 @@
                     Through integrating artificial intelligence and cognitive technologies with robotics we aim to accelerate technological advancements and share them with the research community. 
                     Our mission is to build a vibrant community of researchers, educators, and innovators focused on the entire lifecycle of robotics technologies from conception to application.</p>
                 <div class="mt-4">
-                    <a href="#explore-labs" class="btn btn-lg callaction">Explore Labs</a>
-                    <a href="#learn-more" class="btn btn-lg ms-3 callaction">Learn More</a>
+                    <a href="./VirtualLab_directories.html" class="btn btn-lg callaction" target="_blank">Explore Labs</a>
+                    <a href="https://vib.ai.uni-bremen.de/" class="btn btn-lg ms-3 callaction" target="_blank">Learn More</a>
                 </div>
             </div>
         </header>
